# sega-slider

./: .gitignore  Pipfile  README.md  poetry_scripts.py  pyproject.toml  requirements.pass2.windows.txt  requirements.txt  requirements.windows.txt  sega-slider-onefile.spec  sega-slider.spec
.github/workflows/: pyinstaller-package.yml
src/: checksum.py  e0d0.py  emu15275.ini  emu15275.ini.template  emu15275.kv  emu15275.py  emu15275.settings.json  protocol.py  segaslider.py  segaslider.settings.json  start.py
src/segaslider/: app.py  protocol.py  segaslider.kv  segaslider.settings.json
src/segaslider/helper/: e0d0test.py
